Added a triangle at the top of the recyclerview Added message for user Updated UI

--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -823,4 +823,5 @@
   <string name="nav_item_suggested_edits">Navigation menu item label for suggested edits.</string>
   <string name="suggested_edits_task_action_text_add">Button label for suggested edits task add action</string>
   <string name="suggested_edits_task_action_text_translate">Button label for suggested edits task translate action</string>
+  <string name="suggested_edits_encouragement_message">Message text shown to users to encourage them to continue and increase editing.%s represents the user\'s name.</string>
 </resources>
