--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -617,9 +617,12 @@
   <string name="feed_accessibility_card_text">Short description for the accessibility card that tells user it is the bottom of the explore feed.</string>
   <string name="feed_accessibility_card_load_more_button">Button lable for manually loading more cards to the explore feed.</string>
   <string name="description_edit_text_hint">Hint text that is shown when the article description field is empty.</string>
-  <string name="description_edit_article_description_label_per_language">Label that prompts the user that the summary of the article shows under the label. %s represents the language of the description.</string>
+  <string name="description_edit_article_description_label">Label that prompts the user that the summary of the article shows under the label.</string>
+  <string name="description_edit_translate_article_description_label_per_language">Label that prompts the user that the summary of the article shows under the label. %s represents the language of the description.</string>
   <string name="description_edit_translate_article_description_hint_per_language">Hint text that is shown when the description field is empty. %s represents the language of the description.</string>
-  <string name="description_edit_add_caption_label_per_language">Label that prompts the user that the caption of the image shows under the label. %s represents the language of the caption.</string>
+  <string name="description_edit_add_caption_label">Label that prompts the user that the caption of the image shows under the label.</string>
+  <string name="description_edit_add_caption_hint">Hint text that is shown when the image caption field is empty.</string>
+  <string name="description_edit_translate_caption_label_per_language">Label that prompts the user that the summary of the article shows under the label. %s represents the language of the caption.</string>
   <string name="description_edit_translate_caption_hint_per_language">Hint text that is shown when the image caption field is empty. %s represents the language of the caption.</string>
   <string name="description_edit_save">Hint for the button that is pressed for saving the new description.\n{{Identical|Publish}}</string>
   <string name="description_edit_read">Label that prompts the user to click and open a preview dialog of the article.\n{{Identical|Read}}</string>
