--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -737,6 +737,7 @@
     <item quantity="one">одна правка</item>
     <item quantity="few">%d правки</item>
     <item quantity="many">%d правок</item>
+    <item quantity="other">%d правок</item>
   </plurals>
   <string name="suggested_edits_feed_card_title">Предложения отредактировать</string>
   <string name="suggested_edits_feed_card_add_translation_in_language_button">Добавление описания статей (%s)</string>
