--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -818,4 +818,22 @@
   <string name="suggested_edits_editing_tips_link_text">Label text for editing tips and tricks</string>
   <string name="suggested_edits_help_page_link_text">Label text for suggested edits help page</string>
   <string name="suggested_edits_onboarding_message">Message text shown to users who havent yet used the suggested edits features, to encourage them to start editing.%s represents the user\'s name</string>
+  <string name="suggested_edits_edit_streak_label_text">Suggested edits label text for edit streak</string>
+  <string name="suggested_edits_pageviews_label_text">Suggested edits label text for pageviews</string>
+  <string name="suggested_edits_quality_label_text">Suggested edits label text for edit quality</string>
+  <string name="suggested_edits_quality_excellent_text">Suggested edits label text indicating that the edit quality of the user is excellent</string>
+  <string name="suggested_edits_quality_very_good_text">Suggested edits label text indicating that the edit quality of the user is very good</string>
+  <string name="suggested_edits_quality_good_text">Suggested edits label text indicating that the edit quality of the user is good</string>
+  <string name="suggested_edits_quality_okey_text">Suggested edits label text indicating that the edit quality of the user is okay</string>
+  <string name="suggested_edits_quality_sufficient_text">Suggested edits label text indicating that the edit quality of the user is sufficient</string>
+  <string name="suggested_edits_quality_poor_text">Suggested edits label text indicating that the edit quality of the user is poor</string>
+  <string name="suggested_edits_quality_bad_text">Suggested edits label text indicating that the edit quality of the user is bad</string>
+  <plurals name="suggested_edits_contribution">
+    <item quantity="one">Label text for indicating how many contributions a user has made. For One contribution.</item>
+    <item quantity="other">Label text for indicating how many contributions a user has made. For many contributions.</item>
+  </plurals>
+  <plurals name="suggested_edits_edit_streak_detail_text">
+    <item quantity="one">Label text to show the length of the edit streak in number of days. %d is for one dat.</item>
+    <item quantity="other">Label text to show the length of the edit streak in number of days. %d is for many days</item>
+  </plurals>
 </resources>
