--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -673,7 +673,7 @@
   <string name="suggested_edits_image_preview_dialog_licensing">Licencovanie</string>
   <string name="suggested_edits_image_preview_dialog_more_info">Viac informácií</string>
   <string name="suggested_edits_image_preview_dialog_file_page_link_text">Stránka súboru na Wikipédia Commons</string>
-  <string name="suggested_edits_article_cta_image_caption" fuzzy="true">Pridať titulok obrázku v jazyku %s</string>
+  <string name="suggested_edits_article_cta_image_caption" fuzzy="true">Pridať titulok obrázku v jazyku</string>
   <string name="suggested_edits_article_cta_image_caption_in_language">Pridať titulok obrázku v jazyku %s</string>
   <string name="suggested_edits_article_cta_snackbar_action">Zobraziť</string>
   <string name="suggested_edits_feed_card_add_image_caption">Pridať titulok obrázku</string>
