--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -683,7 +683,7 @@
   <string name="suggested_edits_image_preview_dialog_licensing">Лиценцирање</string>
   <string name="suggested_edits_image_preview_dialog_more_info">Више информација</string>
   <string name="suggested_edits_image_preview_dialog_file_page_link_text">Страница слике на Викимедијиној остави</string>
-  <string name="suggested_edits_article_cta_image_caption" fuzzy="true">Додај натпис слике (%s)</string>
+  <string name="suggested_edits_article_cta_image_caption" fuzzy="true">Додај натпис слике</string>
   <string name="suggested_edits_article_cta_image_caption_in_language">Додај натпис слике (%s)</string>
   <string name="suggested_edits_article_cta_snackbar_action">Прикажи</string>
   <string name="suggested_edits_feed_card_add_image_caption">Додај натпис</string>
