--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -709,7 +709,7 @@
   <string name="suggested_edits_image_preview_dialog_licensing">Lisanslama</string>
   <string name="suggested_edits_image_preview_dialog_more_info">Daha Fazla Bilgi</string>
   <string name="suggested_edits_image_preview_dialog_file_page_link_text">Wikimedia Commons\'taki dosya sayfası</string>
-  <string name="suggested_edits_article_cta_image_caption" fuzzy="true">Resim yazısı ekle (%s)</string>
+  <string name="suggested_edits_article_cta_image_caption" fuzzy="true">Resim yazısı ekle</string>
   <string name="suggested_edits_article_cta_image_caption_in_language">Resim yazısı ekle (%s)</string>
   <string name="suggested_edits_article_cta_snackbar_action">Görüntüle</string>
   <string name="suggested_edits_feed_card_add_image_caption">Altyazı ekle</string>
