--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -630,6 +630,8 @@
   <string name="suggested_edits_tasks_activity_title">Penyuntingan yang disarankan</string>
   <string name="suggested_edits_task_add_description_title" fuzzy="true">Tambahkan deskripsi judul</string>
   <string name="suggested_edits_task_add_description_description">Menyumbang ke artikel tanpa deskripsi judul</string>
+  <string name="suggested_edits_task_translation_title" fuzzy="true">Terjemahkan deskripsi</string>
+  <string name="suggested_edits_task_translation_description">Terjemahkan deskripsi artikel lintas bahasa.</string>
   <string name="suggested_edits_task_image_caption_title" fuzzy="true">Keterangan gambar</string>
   <string name="suggested_edits_task_image_caption_description" fuzzy="true">Tambahkan keterangan ke gambar</string>
   <string name="suggested_edits_task_translate_caption_title">Terjemahkan keterangan gambar</string>
