--- a/app/src/main/res/values-kum/strings.xml
+++ b/app/src/main/res/values-kum/strings.xml
@@ -217,6 +217,7 @@
   <string name="description_edit_tutorial_button_label_start_editing">Тюзлеп башламакъ</string>
   <string name="suggested_edits_menu_info">Маълумат</string>
   <string name="suggested_edits_task_add_description_title" fuzzy="true">Тасвир къошмакъ</string>
+  <string name="suggested_edits_task_translation_title" fuzzy="true">Тасвирлени гёчюрювлери</string>
   <string name="suggested_edits_task_multilingual_negative">Магъа тюгюл</string>
   <string name="suggested_edits_task_multilingual_positive">Тиллер къошмакъ</string>
   <string name="suggested_edits_tasks_onboarding_get_started">Башламакъ</string>
