Finish wiring up edit quality.
Change-Id: I66373bf5b73efaadcf643a20aaaa7e301f3a106e

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -751,10 +751,11 @@
     <string name="suggested_edits_edit_streak_label_text">Edit streak</string>
     <string name="suggested_edits_pageviews_label_text">Pageviews</string>
     <string name="suggested_edits_quality_label_text">Edit quality</string>
+    <string name="suggested_edits_quality_perfect_text">Perfect</string>
     <string name="suggested_edits_quality_excellent_text">Excellent</string>
     <string name="suggested_edits_quality_very_good_text">Very good</string>
     <string name="suggested_edits_quality_good_text">Good</string>
-    <string name="suggested_edits_quality_okey_text">Okay</string>
+    <string name="suggested_edits_quality_okay_text">Okay</string>
     <string name="suggested_edits_quality_sufficient_text">Sufficient</string>
     <string name="suggested_edits_quality_poor_text">Poor</string>
     <string name="suggested_edits_quality_bad_text">Bad</string>
