--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -819,6 +819,9 @@
     <string name="events_count_text">%1$s events from %2$s–%3$d</string>
     <string name="this_year">This year</string>
     <string name="back_to_top">Back to top</string>
+    <string name="on_this_day_dialog_next_month">Next month</string>
+    <string name="on_this_day_dialog_previous_month">Previous month</string>
+    <string name="on_this_day_open_date_picker">Open date picker</string>
     <plurals name="diff_years">
         <item quantity="one">Last year</item>
         <item quantity="other">%d years ago</item>
